connected database mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_ATLAS_URI = "mongodb+srv://doctor:patient@cluster0.j66cg.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+MONGO_ATLAS_URI = "mongodb+srv://doctor:patient@cluster0.j66cg.mongodb.net/doctor?retryWrites=true&w=majority"
